# mobile-manipulation-nav-grasp

./: .gitattributes  .gitignore  README.md
assets/: README.md
config/: README.md  frames.yaml  grasp_planner.yaml  perception_3d.yaml
docs/: PROJECT_ROADMAP.md  PUBLICATION_PLAN.md  README.md  RECTIFICATION_AUDIT.md
docs/architecture/: system_architecture.md
docs/csdn/: csdn_article.md
docs/deployment/: deployment_guide.md
docs/troubleshooting/: troubleshooting.md
launch/: README.md
original_ubuntu22_workspace/: README.md
original_ubuntu22_workspace/ros2_ws/src/navigation2-humble/nav2_behavior_tree/doc/: hierarchy.odg
original_ubuntu22_workspace/ros2_ws/src/navigation2-humble/nav2_bringup/maps/: turtlebot3_world.pgm
original_ubuntu22_workspace/ros2_ws/src/navigation2-humble/nav2_map_server/test/: testmap.pgm
original_ubuntu22_workspace/ros2_ws/src/navigation2-humble/tools/planner_benchmarking/: 100by100_10.pgm  100by100_15.pgm  100by100_20.pgm
original_ubuntu22_workspace/ros2_ws/src/qt_ros_test/: CMakeLists.txt
original_ubuntu22_workspace/ros2_ws/src/qt_ros_test/launch/: qt_ros_test.launch.py
original_ubuntu22_workspace/ros2_ws/src/qt_ros_test/lib/: libQSsh1.so.1
original_ubuntu22_workspace/ros2_ws/src/qt_ros_test/src/: CConnectionForSshClient.cpp  main_window.cpp  main_window.cpp.autosave  qnode.cpp
original_ubuntu22_workspace/ros2_ws/src/qt_ros_test/ui/: main_window.ui
original_ubuntu22_workspace/ros2_ws/src/wheeltec_robot_nav2/map/: WHEELTEC.pgm
original_ubuntu22_workspace/ros2_ws/src/wheeltec_robot_urdf/meshes/sensors/: astra.dae
original_ubuntu22_workspace/ros2_ws/src/wheeltec_rviz2/rviz/: wheeltec.rviz
scripts/: README.md  check_ros_topics.sh  install_ros2_dependencies.sh  publish_to_github.ps1
src/: README.md
src/grasp_planner/: package.xml  setup.cfg  setup.py
src/grasp_planner/grasp_planner/: grasp_pose_planner.py
src/mobile_manipulation_bringup/: package.xml  setup.cfg  setup.py
src/mobile_manipulation_bringup/config/: task_manager.yaml
src/mobile_manipulation_bringup/launch/: demo_pipeline.launch.py
src/perception_3d/: package.xml  setup.cfg  setup.py
src/perception_3d/perception_3d/: depth_projector.py  mock_detector.py
src/task_manager/: package.xml  setup.py
src/task_manager/task_manager/: pick_place_state_machine.py
(+418 files in other folders)
