<?xml version="1.0"?>
<package format="3">
  <name>mobile_manipulation_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for the mobile manipulation demo pipeline.</description>
  <maintainer email="noreply@example.com">mobile-manipulation-maintainers</maintainer>
  <license>MIT</license>

  <exec_depend>perception_3d</exec_depend>
  <exec_depend>grasp_planner</exec_depend>
  <exec_depend>task_manager</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
