<?xml version="1.0"?>
<package format="3">
  <name>perception_3d</name>
  <version>0.1.0</version>
  <description>RGB-D target localization nodes for mobile manipulation.</description>
  <maintainer email="noreply@example.com">mobile-manipulation-maintainers</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
