<?xml version="1.0"?>
<package format="3">
  <name>task_manager</name>
  <version>0.1.0</version>
  <description>Task state machine for mobile manipulation demos.</description>
  <maintainer email="noreply@example.com">mobile-manipulation-maintainers</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
